# shift

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/dao/: base.py
app/migration/: env.py
app/migration/versions/: 344df8d434a8_update_role.py  5ccdea9d79cf_update_db.py  7670a8126a29_update_users.py  8d66a3833d69_update_next_raise_date.py  92103a121987_initial.py  a947e9daab88_add_cascade.py
app/salary/: dao.py  models.py  router.py  schemas.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
tests/: conftest.py  test_salary.py  test_users.py
